--- a/ephemerides.html
+++ b/ephemerides.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns='http://www.w3.org/1999/xhtml'>
 <head>
-    <title>Current Astrological Positions | Calculate Natal Planets with Swiss Ephemeris</title>
+    <title>Ephemeris</title>
     <style type='text/css'>
         * {
-            font: 16pt Tahoma;
+            font: 8pt Tahoma;
+        }
+
+        html {
+            padding: 0;
+            margin: 0;
+        }
+
+        canvas {
+            margin: 0;
+            padding: 0;
+            border-top: 1px solid gray;
+            border-left: 1px solid gray;
+            border-bottom: 1px solid white;
+            border-right: 1px solid white;
+            background: white;
+        }
+
+        td {
+            vertical-align: middle;
+            /*width: 200px;*/
         }
 
         input[type=button] {
@@ -25,12 +45,21 @@
             border-style: inset;
             border-width: 1px;
             box-sizing: border-box;
-            width: 70%;
+            width: 100%;
             resize: none;
             /*height: 70px;*/
         }
 
         select {
+            width: 100%;
+        }
+
+        thead tr td {
+            text-align: center;
+            font-weight: bold;
+        }
+
+        body table {
             width: 100%;
         }
 
@@ -45,8 +74,6 @@
     <script type='text/javascript' src='index.js' charset='utf-8'></script>
     <script type='text/javascript' src='common.js' charset='utf-8'></script>
     <script type='text/javascript' src='load.js' charset='utf-8'></script>
-    <script type='text/javascript' src='currentTime.js' charset='utf-8'></script>
-    <script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
 
     <script type='text/javascript' src='astronomy/index.js' charset='utf-8'></script>
 
@@ -91,32 +118,88 @@
     <script type='text/javascript' src='astronomy/moshier/plan404/uranus.js' charset='utf-8'></script>
     <script type='text/javascript' src='astronomy/moshier/plan404/neptune.js' charset='utf-8'></script>
     <script type='text/javascript' src='astronomy/moshier/plan404/pluto.js' charset='utf-8'></script>
+
     <script type='text/javascript' src='shortcut.js' charset='utf-8'></script>
 
 </head>
-<body onload='$e.currenttime ()'>
-
-    Enter Date (UTC time)</br>
-    (dd.mm.yyyy hh:mm:ss.sss)
-    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00.000</textarea>
-
-    <p>
-       <input type='button' value='Calculate Planetary Positions' onclick='$e.calculatedTime ()'>
-    </p>
-
-    <div id = "sun">sun</div>
-    <div id = "moon">moon</div>
-    <div id = "mercury">mercury</div>
-    <div id = "venus">venus</div>
-    <div id = "mars">mars</div>
-    <div id = "jupiter">jupiter</div>
-    <div id = "saturn">saturn</div>
-    <div id = "uranus">uranus</div>
-    <div id = "neptune">neptune</div>
-    <div id = "pluto">pluto</div>
-    <div id = "chiron">chiron</div>
-    
-    <div id = "Longitude360"></div>
-
+<body onload='$e.load ()'>
+    <table cellpadding='0' cellspacing='3'>
+        <thead><tr><td>Ephemerides</td></tr></thead>
+        <tr><td><table>
+            <thead><tr><td colspan='6'>Time</td></tr></thead>
+            <tr>
+                <td></td>
+                <td colspan='2' style='text-align: center'>Terrestrial<input type='button' value='=' onclick='$e.load ()'></td>
+                <td colspan='2' style='text-align: center'>Universal</td>
+                <td style='text-align: center'>Delta</td>
+            </tr>
+            <tr>
+                <td>Gregorian</td>
+                <td><textarea id='$const.date' rows='1'>01.01.1986 00:00:00.000</textarea></td>
+                <td rowspan='2' style='text-align: center'>=</td>
+                <td><textarea class='$const.date.universalDateString' rows='1' disabled='disabled'>01.01.2012 00:00:00.000</textarea></td>
+                <td rowspan='2' style='text-align: center'>+</td>
+                <td><textarea class='"00:00:"+($const.date.delta)' rows='1' disabled='disabled'>00:00:00.000</textarea></td>
+            </tr>
+            <tr>
+                <td>Julian</td>
+                <td><textarea class='$const.date.julian' rows='1' disabled='disabled'>2451545.0</textarea></td>
+                <td><textarea class='$const.date.universal' rows='1' disabled='disabled'>2451545.0</textarea></td>
+                <td><textarea class='$const.date.delta/86400' rows='1' disabled='disabled'>00:00:00.000</textarea></td>
+            </tr>
+        </table></td></tr>
+        <tr><td style='vertical-align: top'><table>
+            <thead><tr><td>Observer</td><td>Body <input type='button' value='=' onclick='$e.load ()'></td></tr></thead>
+            <tr>
+                <td><table>
+                    <tr>
+                        <td>Body</td>
+                        <td colspan='2'><select disabled='disabled'><option label='earth'>earth</option></select></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td style='text-align: center'>Geodetic</td>
+                        <td style='text-align: center'>Geodecentric</td>
+                    </tr>
+                    <tr>
+                        <td>Longitude</td>
+                        <td><textarea class='$const.tlong' rows='1'></textarea></td>
+                        <td><textarea class='$const.tlong' rows='1' disabled='disabled'></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>Latitude</td>
+                        <td><textarea class='$const.glat' rows='1'></textarea></td>
+                        <td><textarea class='$const.tlat' rows='1' disabled='disabled'></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>Height</td>
+                        <td><textarea class='$const.height' rows='1'></textarea></td>
+                        <td><textarea class='$const.trho*$const.aearth/1000' rows='1' disabled='disabled'></textarea></td>
+                    </tr>
+                </table></td><td style='vertical-align: top'><table>
+                    <tr>
+                        <td>Body</td>
+                        <td><select id='$const.body' class='$moshier.body'></select></td>
+                    </tr>
+                <tr>
+                    <td>Apparent Longitude (dms 30&deg;)</td>
+                    <td><textarea class='$const.body.position.apparentLongitude30String' rows='1' disabled='disabled'></textarea></td>
+                </tr>
+                <tr>
+                    <td>Apparent Longitude (dms 360&deg;)</td>
+                    <td><textarea class='$const.body.position.apparentLongitudeString' rows='1' disabled='disabled'></textarea></td>
+                </tr>
+                <tr>
+                    <td>Apparent Longitude (dd)</td>
+                    <td><textarea class='$const.body.position.apparentLongitude' rows='1' disabled='disabled'></textarea></td>
+                </tr>
+                <tr>
+                    <td>Geocentric distance (km)</td>
+                    <td><textarea class='$const.body.position.geocentricDistance' rows='1' disabled='disabled'></textarea></td>
+                </tr>
+                </table></td>
+            </tr>
+        </table></td></tr>
+    </table>
 </body>
 </html>
