Adding links and clean-up to the index.html

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 </head>
 <body onload='$e.currenttime ()'>
 
-    Enter Date (UTC time)</br>
+    <p>Enter Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)</p>
+    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00.000</textarea></br>
     (dd.mm.yyyy hh:mm:ss.sss)
-    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00.000</textarea>
 
     <p>
        <input type='button' value='Calculate Planetary Positions' onclick='$e.calculatedTime ()'>
