--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 <body onload='$e.currenttime ()'>
 
     <p>Enter Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)</p>
-    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00.000</textarea></br>
-    (dd.mm.yyyy hh:mm:ss.sss)
+    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00</textarea></br>
+    (dd.mm.yyyy hh:mm:ss)<br/>
+        
 
     <p>
        <input type='button' value='Calculate Planetary Positions' onclick='$e.calculatedTime ()'>
