switched out textarea date input to more mobile user-friendly dropdown select lists.

--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@
 </head>
 <body onload='$e.currenttime ()'>
 
-    <p>Enter Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)</p>
-    <textarea id='$const.date' rows='1'>01.09.1976 05:05:00</textarea></br>
-    (dd.mm.yyyy hh:mm:ss)<br/>
-        
+    Enter Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)
     <div id="datewrapper">
 	    <form id="dateinput">
 	      <label for = "monthfield">Month</label>
