Adding in a rough natal chart graph with the planetary positions. No sign/planet glyphs or degrees yet. All planets have the same color of red for now.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             width: 800px;
             margin: auto;
             padding: 0;
-            background: #dcdcdc;
         }
         
 
@@ -68,6 +67,7 @@
     <script type='text/javascript' src='load.js' charset='utf-8'></script>
     <script type='text/javascript' src='currenttime.js' charset='utf-8'></script>
     <script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
+    <script type='text/javascript' src='natalchart.js' charset='utf-8'></script>    
 
     <script type='text/javascript' src='astronomy/index.js' charset='utf-8'></script>
 
@@ -156,8 +156,11 @@
     <div id = "neptune">neptune</div>
     <div id = "pluto">pluto</div>
     <div id = "chiron">chiron</div>
+
+    <canvas id="canvas" width="500" height="500"></canvas>
     
     <div id = "Longitude360"></div>
+
 
     <div class="attribution">
     <p>Source code: <a href="https://github.com/kentbye/ephemeris">github</a></p>
