adding input select fields for the natal planet. Abstracted out various functions and some clean-up

--- a/index.html
+++ b/index.html
@@ -149,26 +149,46 @@
 
 
     <div id="datewrapper">
-    Enter Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)
-	    <form id="dateinput">
-	      <label for = "monthfield">Month</label>
-	      <select id = "monthfield">
+    Enter Transit Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)
+	    <form id="transitdateinput">
+	      <label for = "transitmonthfield">Month</label>
+	      <select id = "transitmonthfield">
 	      </select>
-	      <label for = "dayfield">Day</label>
-	      <select id = "dayfield">
+	      <label for = "transitdayfield">Day</label>
+	      <select id = "transitdayfield">
 	      </select>
-	      <label for = "yearfield">Year</label>
-	      <select id = "yearfield">
+	      <label for = "transityearfield">Year</label>
+	      <select id = "transityearfield">
 	      </select>
-	      <label for = "hourfield">Hour</label>
-	      <select id = "hourfield">
+	      <label for = "transithourfield">Hour</label>
+	      <select id = "transithourfield">
 	      </select>
-	      <label for = "minutefield">Minute</label>
-	      <select id = "minutefield">
+	      <label for = "transitminutefield">Minute</label>
+	      <select id = "transitminutefield">
 	      </select>
-	      <label for = "secondfield">Second</label>
-	      <select id = "secondfield">
+	      <label for = "transitsecondfield">Second</label>
+	      <select id = "transitsecondfield">
 	      </select>
+	      <br>Enter Natal Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)<br>
+	      <label for = "natalmonthfield">Month</label>
+	      <select id = "natalmonthfield">
+	      </select>
+	      <label for = "nataldayfield">Day</label>
+	      <select id = "nataldayfield">
+	      </select>
+	      <label for = "natalyearfield">Year</label>
+	      <select id = "natalyearfield">
+	      </select>
+	      <label for = "natalhourfield">Hour</label>
+	      <select id = "natalhourfield">
+	      </select>
+	      <label for = "natalminutefield">Minute</label>
+	      <select id = "natalminutefield">
+	      </select>
+	      <label for = "natalsecondfield">Second</label>
+	      <select id = "natalsecondfield">
+	      </select>
+
 	    </form>
     </div>
     <p>
