--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@
 	    #chartcanvas { 
 	      z-index: 0;
 	    }
-	    #natalcanvas { 
+	    #transitcanvas { 
 	      position: absolute; 
 	      top: 0px; 
 	      left: 0px; 
 	      z-index: 1;
 	    }
-	    #transitcanvas { 
+	    #natalcanvas { 
 	      position: absolute; 
 	      top: 0px; 
 	      left: 0px; 
 	      z-index: 2;
 	    }
 	    #transitingaspects {
-		  height: 300px;
+		  height: 240px;
 		  margin-top: 10px;
 	    }
 
@@ -134,6 +134,30 @@
     <script type='text/javascript' src='astronomy/moshier/plan404/neptune.js' charset='utf-8'></script>
     <script type='text/javascript' src='astronomy/moshier/plan404/pluto.js' charset='utf-8'></script>
     <script type='text/javascript' src='shortcut.js' charset='utf-8'></script>
+    <script type="text/javascript">
+	    var animateFlag = false;
+	    document.onkeydown = function(evt) {
+		    evt = evt || window.event;
+		    switch (evt.keyCode) {
+        case 37:
+            $e.increment(-86400);
+            break;
+        case 39:
+            $e.increment(86400);
+            break;
+        case 32:
+            evt.preventDefault();
+					  if (animateFlag) {
+						  $e.animateStop();
+						  animateFlag = false;
+					  } else {
+						  $e.animateStart();
+						  animateFlag = true;
+					  }
+            break;
+        }
+      };
+		</script>
 
 </head>
 <body onload='$e.currenttime ()'>
