Added arrows and some general clean-up

--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
 	      z-index: 2;
 	    }
 	    #transitingaspects {
-		  height: 240px;
-		  margin-top: 10px;
+		  	height: 240px;
+		  	margin-top: 10px;
 	    }
+	    #charttime {
+		    margin-left: 20px;
+	    }
+	    
 
 
     </style>
@@ -246,7 +250,7 @@
     </div>
     
     <div class="attribution">
-    <p>Source code: <a href="https://github.com/kentbye/ephemeris">github</a></p>
+    <p>Made by Kent Bye</p>
     </div>
 
 </body>
