Fix aspect canvas size for Safari and Chrome

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
       <canvas id="natalcanvas" width = "460" height = "460" ></canvas>
     </div>
     <div id="transitingaspects">
-	  <canvas id="aspectcanvas" width = "460" height = "300" ></canvas>
+	  <canvas id="aspectcanvas" width = "460" height = "240" ></canvas>
     </div>    
-    <div id="increment-buttons" style="clear: both;">    
+    <div id="increment-buttons">    
 	    <input type='button' value='-yr' onclick='$e.increment(-31557600)'>
 	    <input type='button' value='-mth' onclick='$e.increment(-2678400)'>
 	    <input type='button' value='-dy' onclick='$e.increment(-86400)'>
