Refactoring of natalchart.js to break out functions in a more granular fashion. Lots of clean-up. Split out graphicalephemeris function into new file.

--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
 		    margin-left: 20px;
 	    }
 	    
-
-
     </style>
 
     <script type='text/javascript' src='index.js' charset='utf-8'></script>
     <script type='text/javascript' src='common.js' charset='utf-8'></script>
     <script type='text/javascript' src='load.js' charset='utf-8'></script>
     <script type='text/javascript' src='currenttime.js' charset='utf-8'></script>
-    <script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
-    <script type='text/javascript' src='loadglyphs.js' charset='utf-8'></script>    
     <script type='text/javascript' src='natalchart.js' charset='utf-8'></script>    
+    <script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
+    <script type='text/javascript' src='loadglyphs.js' charset='utf-8'></script>  
+    <script type='text/javascript' src='graphicalephemeris.js' charset='utf-8'></script>    
 
     <script type='text/javascript' src='astronomy/index.js' charset='utf-8'></script>
     <script type='text/javascript' src='astronomy/moshier/index.js' charset='utf-8'></script>
