Initial port of Swiss Ephemeris House Calculations to JavaScript. Includes Koch, Placidus, Whole Sign and Porphyry.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 		<script type='text/javascript' src='load.js' charset='utf-8'></script>
 		<script type='text/javascript' src='currenttime.js' charset='utf-8'></script>
 		<script type='text/javascript' src='natalchart.js' charset='utf-8'></script>		
+		<script type='text/javascript' src='swe_houses.js' charset='utf-8'></script>
 		<script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
 		<script type='text/javascript' src='loadglyphs.js' charset='utf-8'></script>	
 		<script type='text/javascript' src='graphicalephemeris.js' charset='utf-8'></script>		
@@ -132,7 +133,6 @@
 		<script type='text/javascript' src='astronomy/moshier/transit.js' charset='utf-8'></script>
 		<script type='text/javascript' src='astronomy/moshier/vearth.js' charset='utf-8'></script>
 		<script type='text/javascript' src='astronomy/moshier/processor.js' charset='utf-8'></script>
-
 		<script type='text/javascript' src='astronomy/moshier/plan404/index.js' charset='utf-8'></script>
 		<script type='text/javascript' src='astronomy/moshier/plan404/mercury.js' charset='utf-8'></script>
 		<script type='text/javascript' src='astronomy/moshier/plan404/venus.js' charset='utf-8'></script>
