Debug code for mobile

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 				<div id="cityinput"><label for="city">City, State</label>
 				<input id="city" name="city" type="text" onfocus="$e.disableSpacebarAnimate(false)" onfocus="$e.disableSpacebarAnimate(true)">
 				</div>
+				<div id="debug"></div>
 				<div id="latlong">
 					<input id="search" type="button" value="Look up" />
 					<p><label for="Latitude">Latitude</label>
