Add favicon and change moon orbs

--- a/moon.html
+++ b/moon.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Moon Tracker | Natal Transit Tracker & Astrology Positions</title>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 		<style type='text/css'>
 			 	* {
 						font: 14pt Tahoma;
