--- a/natal3d.html
+++ b/natal3d.html
@@ -192,7 +192,7 @@
 					var number = document.createElement( 'div' );
 					number.className = 'number';
 					number.textContent = i + 1;
-					element.appendChild( number );
+					//element.appendChild( number );
 
 					var symbol = document.createElement( 'div' );
 					symbol.className = 'symbol';
