--- a/natal3d.html
+++ b/natal3d.html
@@ -40,7 +40,7 @@
 			}
 
 			.element {
-				width: 192px;
+				width: 191px;
 				height: 180px;
 				box-shadow: 0px 0px 20px rgba(0,255,255,0.5);
 				border: 1px solid rgba(127,255,255,0.25);
@@ -180,13 +180,13 @@
 					element.className = 'element';
 					astroElement = Math.ceil((i+1)/3) % 4;
 					if (astroElement == 1) {
-						element.style.backgroundColor = 'rgba(255,0,0,0.5)';
+						element.style.backgroundColor = 'rgba(255,0,0,0.25)';
 					} else if (astroElement == 2) {
-						element.style.backgroundColor = 'rgba(0,255,0,0.5)';
+						element.style.backgroundColor = 'rgba(0,255,0,0.25)';
 					} else if (astroElement == 3) {
-						element.style.backgroundColor = 'rgba(255,255,0,0.5)';
+						element.style.backgroundColor = 'rgba(255,255,0,0.25)';
 					} else if (astroElement == 0) {
-						element.style.backgroundColor = 'rgba(0,0,255,0.5)';
+						element.style.backgroundColor = 'rgba(0,0,255,0.25)';
 					}
 										
 					var number = document.createElement( 'div' );
@@ -197,7 +197,7 @@
 					var symbol = document.createElement( 'div' );
 					symbol.className = 'symbol';
 					symbol.textContent = item[ 0 ];
-					element.appendChild( symbol );
+					//element.appendChild( symbol );
 
 					var details = document.createElement( 'div' );
 					details.className = 'details';
