testing a uesr interface prototype for zodical releasing selection

--- a/timelord.html
+++ b/timelord.html
@@ -86,6 +86,18 @@
 						width: 460px;
 						float: right;
 				}
+				#zodicalreleasingdata {
+						position: relative; 
+						height: 770px; 
+						width: 460px;
+						float: right;
+				}
+				#zodicalreleasingl1l2 {
+						position: relative; 
+						height: 770px; 
+						width: 180px;
+						float: left;
+				}
 				#natalcontainer {
 						position: relative; 
 						height: 770px; 
@@ -110,14 +122,18 @@
 					width: 140px;
 				}
 
+				.loosingbond {
+					color: #e45e5e;
+				}
+
 			
 		</style>
 
 <!--		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 		<script type='text/javascript' src='jquery.min.js' charset='utf-8'></script>
 		
-<!--     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />     -->
-<!--     <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script> -->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
+    <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
 
 		
 		<script type='text/javascript' src='index.js' charset='utf-8'></script>
@@ -322,6 +338,131 @@
 		<div class="attribution">
 		<p>Made by <a href="mailto:kent@kentbye.com">Kent Bye</a></p>
 		</div>
+
+    <div id="zodicalreleasingdata">
+      <div id="zodicalreleasingl1l2">    
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>3 9/1/1976</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">3 9/1/1976</a></li>
+        <li><a href="#">4 4/24/1978</a></li>
+        <li><a href="#">5 5/13/1980</a></li>
+        <li><a href="#">6 12/4/1981</a></li>
+        <li><a href="#">7 7/27/1983</a></li>
+        <li><a href="#">8 3/23/1984</a></li>
+        <li><a href="#">9 6/16/1985</a></li>
+        <li><a href="#">10 6/11/1986</a></li>
+        <li><a href="#">11 8/29/1988</a></li>
+        <li><a href="#">12 2/15/1991</a></li>
+        <li><a href="#">1 2/10/1992</a></li>
+        <li><a href="#">2 5/5/1993</a></li>
+        <li class="loosingbond"><a href="#">9 12/31/1993 LB</a></li>
+        <li><a href="#">10 12/26/1994</a></li>
+    </ul>
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>4 5/19/1996</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">4 5/19/1996</a></li>
+        <li><a href="#">5 6/8/1998</a></li>
+        <li><a href="#">6 12/30/1999</a></li>
+        <li><a href="#">7 8/21/2001</a></li>
+        <li><a href="#">8 4/18/2002</a></li>
+        <li><a href="#">9 7/12/2003</a></li>
+        <li><a href="#">10 7/6/2004</a></li>
+        <li><a href="#">11 9/24/2006</a></li>
+        <li><a href="#">12 3/12/2009</a></li>
+        <li><a href="#">1 3/7/2010</a></li>
+        <li><a href="#">2 5/31/2011</a></li>
+        <li><a href="#">3 1/26/2012</a></li>
+        <li class="loosingbond"><a href="#">10 9/17/2013 LB</a></li>
+        <li><a href="#">11 12/6/2015</a></li>
+        <li><a href="#">12 5/24/2018</a></li>
+        <li><a href="#">1 5/19/2019</a></li>
+        <li><a href="#">2 8/11/2020</a></li>
+    </ul>
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false" data-mini="true">
+    <h3>5 1/8/2021</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">5 1/8/2021</a></li>
+        <li><a href="#">6 8/1/2022</a></li>
+        <li><a href="#">7 3/23/2024</a></li>
+        <li><a href="#">8 11/18/2024</a></li>
+        <li><a href="#">9 2/11/2026</a></li>
+        <li><a href="#">10 2/6/2027</a></li>
+        <li><a href="#">11 4/26/2029</a></li>
+        <li><a href="#">12 10/13/2031</a></li>
+        <li><a href="#">1 10/7/2032</a></li>
+        <li><a href="#">2 12/31/2033</a></li>
+        <li><a href="#">3 8/28/2034</a></li>
+        <li><a href="#">4 4/19/2036</a></li>
+        <li class="loosingbond"><a href="#">11 5/9/2038 LB</a></li>
+    </ul>
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>6 10/1/2039</h3>
+    <ul data-role="listview" data-mini="true">    
+        <li><a href="#">6 10/1/2039</a></li>
+        <li><a href="#">7 5/23/2041</a></li>
+        <li><a href="#">8 1/18/2042</a></li>
+        <li><a href="#">9 4/13/2043</a></li>
+        <li><a href="#">10 4/7/2044</a></li>
+        <li><a href="#">11 6/26/2046</a></li>
+        <li><a href="#">12 12/12/2048</a></li>
+        <li><a href="#">1 12/7/2049</a></li>
+        <li><a href="#">2 3/2/2051</a></li>
+        <li><a href="#">3 10/28/2051</a></li>
+        <li><a href="#">4 6/19/2053</a></li>
+        <li><a href="#">5 7/9/2055</a></li>
+        <li class="loosingbond"><a href="#">12 1/29/2057 LB</a></li>
+        <li><a href="#">1 1/24/2058</a></li>
+        <li><a href="#">2 4/19/2059</a></li>
+    </ul>    
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>7 6/18/2059</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">7 6/18/2059</a></li>
+        <li><a href="#">8 2/13/2060</a></li>
+        <li><a href="#">9 5/8/2061</a></li>
+        <li><a href="#">10 5/3/2062</a></li>
+        <li><a href="#">11 7/21/2064</a></li>
+        <li><a href="#">12 1/7/2067</a></li>
+    </ul>    
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>8 5/7/2067</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">8 5/7/2067</a></li>
+        <li><a href="#">9 7/30/2068</a></li>
+        <li><a href="#">10 7/25/2069</a></li>
+        <li><a href="#">11 10/13/2071</a></li>
+        <li><a href="#">12 3/31/2074</a></li>
+        <li><a href="#">1 3/26/2075</a></li>
+        <li><a href="#">2 6/18/2076</a></li>
+        <li><a href="#">3 2/13/2077</a></li>
+        <li><a href="#">4 10/6/2078</a></li>
+        <li><a href="#">5 10/25/2080</a></li>
+    </ul>    
+</div><!-- /collapsible -->
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+    <h3>9 2/17/2082</h3>
+    <ul data-role="listview" data-mini="true">
+        <li><a href="#">9 2/17/2082</a></li>
+        <li><a href="#">10 2/12/2083</a></li>
+        <li><a href="#">11 5/2/2085</a></li>
+        <li><a href="#">12 10/19/2087</a></li>
+        <li><a href="#">1 10/13/2088</a></li>
+        <li><a href="#">2 1/6/2090</a></li>
+        <li><a href="#">3 9/3/2090</a></li>
+        <li><a href="#">4 4/25/2092</a></li>
+    </ul>    
+</div><!-- /collapsible -->
+
+
+      </div>
+    </div>
 
 </body>
 </html>
