--- a/timelord.html
+++ b/timelord.html
@@ -341,9 +341,9 @@
 
     <div id="zodicalreleasingdata">
       <div id="zodicalreleasingl1l2">    
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>3 9/1/1976</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">3 9/1/1976</a></li>
         <li><a href="#">4 4/24/1978</a></li>
         <li><a href="#">5 5/13/1980</a></li>
@@ -360,9 +360,9 @@
         <li><a href="#">10 12/26/1994</a></li>
     </ul>
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>4 5/19/1996</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">4 5/19/1996</a></li>
         <li><a href="#">5 6/8/1998</a></li>
         <li><a href="#">6 12/30/1999</a></li>
@@ -382,9 +382,9 @@
         <li><a href="#">2 8/11/2020</a></li>
     </ul>
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false">
     <h3>5 1/8/2021</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">5 1/8/2021</a></li>
         <li><a href="#">6 8/1/2022</a></li>
         <li><a href="#">7 3/23/2024</a></li>
@@ -400,9 +400,9 @@
         <li class="loosingbond"><a href="#">11 5/9/2038 LB</a></li>
     </ul>
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>6 10/1/2039</h3>
-    <ul data-role="listview" data-mini="true">    
+    <ul data-role="listview">    
         <li><a href="#">6 10/1/2039</a></li>
         <li><a href="#">7 5/23/2041</a></li>
         <li><a href="#">8 1/18/2042</a></li>
@@ -420,9 +420,9 @@
         <li><a href="#">2 4/19/2059</a></li>
     </ul>    
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>7 6/18/2059</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">7 6/18/2059</a></li>
         <li><a href="#">8 2/13/2060</a></li>
         <li><a href="#">9 5/8/2061</a></li>
@@ -431,9 +431,9 @@
         <li><a href="#">12 1/7/2067</a></li>
     </ul>    
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>8 5/7/2067</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">8 5/7/2067</a></li>
         <li><a href="#">9 7/30/2068</a></li>
         <li><a href="#">10 7/25/2069</a></li>
@@ -446,9 +446,9 @@
         <li><a href="#">5 10/25/2080</a></li>
     </ul>    
 </div><!-- /collapsible -->
-<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true" data-mini="true">
+<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
     <h3>9 2/17/2082</h3>
-    <ul data-role="listview" data-mini="true">
+    <ul data-role="listview">
         <li><a href="#">9 2/17/2082</a></li>
         <li><a href="#">10 2/12/2083</a></li>
         <li><a href="#">11 5/2/2085</a></li>
