--- a/timelord.html
+++ b/timelord.html
@@ -93,14 +93,14 @@
 				}
 				#zodicalreleasingl1l2 {
 						position: relative; 
-						width: 180px;
+						width: 170px;
 						float: left;
 				}
 				#zodicalreleasingl3l4 {
 						position: relative; 
-						width: 180px;
+						width: 220px;
 						float: left;
-						margin-left: 60px;
+						margin-left: 45px;
 				}
 				#currentdaycanvas { 
 						position: absolute; 
@@ -235,30 +235,33 @@
 
 </head>
 <body onload='$e.currenttime ("timelord")'>
-		
-    <div id="zodicalreleasingdata">
+
+		<div class="ui-corner-all custom-corners" id="zodicalreleasingdata">
+		  <div class="ui-bar ui-bar-a">
+		    <h3>Zodical Releasing from Gemini: <img src="img/cancer.png" class="ui-li-icon"><img src="img/gemini.png" class="ui-li-icon"><img src="img/capricorn.png" class="ui-li-icon"><img src="img/pisces.png" class="ui-li-icon"></h3>
+		  </div>
       <div id="zodicalreleasingl1l2">
 				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>3 9/1/1976</h3>
+				    <h3><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976</h3>
 				    <ul data-role="listview">
-				        <li><a href="#">3 9/1/1976</a></li>
-				        <li><a href="#">4 4/24/1978</a></li>
-				        <li><a href="#">5 5/13/1980</a></li>
-				        <li><a href="#">6 12/4/1981</a></li>
-				        <li><a href="#">7 7/27/1983</a></li>
-				        <li><a href="#">8 3/23/1984</a></li>
-				        <li><a href="#">9 6/16/1985</a></li>
-				        <li><a href="#">10 6/11/1986</a></li>
-				        <li><a href="#">11 8/29/1988</a></li>
-				        <li><a href="#">12 2/15/1991</a></li>
-				        <li><a href="#">1 2/10/1992</a></li>
-				        <li><a href="#">2 5/5/1993</a></li>
-				        <li class="loosingbond"><a href="#">9 12/31/1993 LB</a></li>
-				        <li><a href="#">10 12/26/1994</a></li>
+				        <li data-icon="false"><a href="#"><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976 <span class="ui-li-count">0</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">4/24/1978<span class="ui-li-count">1.3</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/leo.png" class="ui-li-icon">5/13/1980<span class="ui-li-count">3.7</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/virgo.png" class="ui-li-icon">12/4/1981<span class="ui-li-count">5.2</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/libra.png" class="ui-li-icon">7/27/1983<span class="ui-li-count">7.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/scorpio.png" class="ui-li-icon">3/23/1984<span class="ui-li-count">8.2</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">6/16/1985<span class="ui-li-count">8.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">6/11/1986<span class="ui-li-count">9.7</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/aquarius.png" class="ui-li-icon">8/29/1988<span class="ui-li-count">10.2</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/pisces.png" class="ui-li-icon">2/15/1991<span class="ui-li-count">12.4</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/aries.png" class="ui-li-icon">2/10/1992<span class="ui-li-count">14.5</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/taurus.png" class="ui-li-icon">5/5/1993<span class="ui-li-count">16.9</span></a></li>
+				        <li data-icon="false" class="loosingbond"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">88/88/8888 LB<span class="ui-li-count">88.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">12/26/1994</a></li>
 				    </ul>
 				</div><!-- /collapsible -->
 				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>4 5/19/1996</h3>
+				    <h3><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">5/19/1996 <span class="ui-li-count">19.6</span></h3>
 				    <ul data-role="listview">
 				        <li><a href="#">4 5/19/1996</a></li>
 				        <li><a href="#">5 6/8/1998</a></li>
@@ -360,22 +363,22 @@
 				
 		<div id="zodicalreleasingl3l4">    
 				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false">
-				    <h3>3 9/1/1976</h3>
+				    <h3><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976</h3>
 				    <ul data-role="listview">
-				        <li><a href="#">3 9/1/1976</a></li>
-				        <li><a href="#">4 4/24/1978</a></li>
-				        <li><a href="#">5 5/13/1980</a></li>
-				        <li><a href="#">6 12/4/1981</a></li>
-				        <li><a href="#">7 7/27/1983</a></li>
-				        <li><a href="#">8 3/23/1984</a></li>
-				        <li><a href="#">9 6/16/1985</a></li>
-				        <li><a href="#">10 6/11/1986</a></li>
-				        <li><a href="#">11 8/29/1988</a></li>
-				        <li><a href="#">12 2/15/1991</a></li>
-				        <li><a href="#">1 2/10/1992</a></li>
-				        <li><a href="#">2 5/5/1993</a></li>
-				        <li class="loosingbond"><a href="#">9 12/31/1993 LB</a></li>
-				        <li><a href="#">10 12/26/1994</a></li>
+				        <li data-icon="false"><a href="#"><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976 - 05:05<span class="ui-li-count">0</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">4/24/1978 - 04:05<span class="ui-li-count">1.3</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/leo.png" class="ui-li-icon">5/13/1980 - 14:25<span class="ui-li-count">3.7</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/virgo.png" class="ui-li-icon">88/88/8888 - 88:88 LB<span class="ui-li-count">88.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/libra.png" class="ui-li-icon">7/27/1983 - 18:16<span class="ui-li-count">7.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/scorpio.png" class="ui-li-icon">3/23/1984<span class="ui-li-count">8.2</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">6/16/1985<span class="ui-li-count">8.8</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">6/11/1986<span class="ui-li-count">9.7</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/aquarius.png" class="ui-li-icon">8/29/1988<span class="ui-li-count">10.2</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/pisces.png" class="ui-li-icon">2/15/1991<span class="ui-li-count">12.4</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/aries.png" class="ui-li-icon">2/10/1992<span class="ui-li-count">14.5</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/taurus.png" class="ui-li-icon">5/5/1993<span class="ui-li-count">16.9</span></a></li>
+				        <li data-icon="false" class="loosingbond"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">12/31/1993 LB<span class="ui-li-count">17.1</span></a></li>
+				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">12/26/1994</a></li>
 				    </ul>
 				</div><!-- /collapsible -->
 				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
