--- a/timelord.html
+++ b/timelord.html
@@ -88,7 +88,7 @@
 				}
 				#zodicalreleasingdata {
 						position: relative; 
-						width: 480px;
+						width: 460px;
 						float: right;
 				}
 				#zodicalreleasingl1l2 {
@@ -120,11 +120,16 @@
 					margin-left: -18px;
 				}
         #expandl1l2 {
-	        float: left;
-	        margin-left: -20px;
+          float: left;
+	        width: 170px;
+	        margin-top: 2px;
+	        margin-bottom: -5px;
         }
         #expandl3l4 {
-	        float: right;
+        	width: 220px;
+        	float: right;
+        	margin-top: 2px;
+        	margin-bottom: -5px;
         }
 
 			
@@ -275,7 +280,7 @@
 		<div class="ui-corner-all custom-corners" id="zodicalreleasingdata">
 		  <div class="ui-bar ui-bar-a" id="levelheader">
 		    <h3>Zodical Releasing from Sagitarrius: <img src="img/cancer.png" class="ui-li-icon"><img src="img/gemini.png" class="ui-li-icon"><img src="img/capricorn.png" class="ui-li-icon"><img src="img/pisces.png" class="ui-li-icon"></h3>
-		    <a href="#" id="expandl1l2" class="ui-btn ui-icon-carat-u ui-btn-icon-notext ui-corner-all">No text</a>
+		    <a href="#" id="expandl1l2" class="ui-btn ui-icon-carat-d ui-btn-icon-notext ui-corner-all">No text</a>
 		    <a href="#" id="expandl3l4" class="ui-btn ui-icon-carat-d ui-btn-icon-notext ui-corner-all">No text</a>
 		  </div>
       <div id="zodicalreleasingl1l2">
