Initial dynamic periods

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 						height: 460px; 
 						width: 460px;
 				}
+				#container {
+						display: none;
+				}
+
 				#chartcanvas { 
 						z-index: 0;
 				}
