Adding in some images + some fixes

--- a/timelord.html
+++ b/timelord.html
@@ -136,7 +136,7 @@
 		<script type='text/javascript' src='index.js' charset='utf-8'></script>
 		<script type='text/javascript' src='common.js' charset='utf-8'></script>
 		<script type='text/javascript' src='load.js' charset='utf-8'></script>
-		<script type='text/javascript' src='currenttime.js' charset='utf-8'></script>
+		<script type='text/javascript' src='currenttimeTimelord.js' charset='utf-8'></script>
 		<script type='text/javascript' src='natalchart.js' charset='utf-8'></script>		
 		<script type='text/javascript' src='swe_houses.js' charset='utf-8'></script>
 		<script type='text/javascript' src='calculatedTime.js' charset='utf-8'></script>
@@ -237,7 +237,7 @@
 
 
 </head>
-<body onload='$e.currenttime ("timelord")'>
+<body onload='$e.currenttimeTimelord ("timelord")'>
   <div data-role="page" id="home">
 		<div id="zodicalreleasingdata">
 				<canvas id="zodicalreleasing" width = "460" height = "2310" ></canvas>
