reading values from cache & setting default to whole sign houses

--- a/timelord.html
+++ b/timelord.html
@@ -62,7 +62,7 @@
 						height: 460px; 
 						width: 460px;
 				}
-				#container, #latlong, #chartcanvas, #transitcanvas, #natalcanvas, #cityinput {
+				#container, #latlong, #chartcanvas, #transitcanvas, #natalcanvas, #cityinput, #transitingaspects {
 						display: none;
 				}
 
@@ -85,9 +85,6 @@
 				#transitingaspects {
 						height: 310px;
 						margin-top: 10px;
-				}
-				#transitingaspects {
-						display: none;
 				}
 				#zodicalreleasingdatal3 {
 						width: 450px;
