calculating the zodical releasing periods for L1 & L2

--- a/timelord.html
+++ b/timelord.html
@@ -140,7 +140,7 @@
 		<script type='text/javascript' src='calculateTimeLord.js' charset='utf-8'></script>
 		<script type='text/javascript' src='loadglyphs.js' charset='utf-8'></script>	
 		<script type='text/javascript' src='graphicalephemeris.js' charset='utf-8'></script>		
-		<script type='text/javascript' src='timelord.js' charset='utf-8'></script>
+		<!--<script type='text/javascript' src='timelord.js' charset='utf-8'></script>-->
 
 		<script type='text/javascript' src='astronomy/index.js' charset='utf-8'></script>
 		<script type='text/javascript' src='astronomy/moshier/index.js' charset='utf-8'></script>
