Adding Chris Brennan

--- a/timelord.html
+++ b/timelord.html
@@ -315,7 +315,7 @@
 		
 		
 		<div class="attribution">
-		<p>Made by <a href="mailto:kent@kentbye.com">Kent Bye</a> & <a href="http://jennzahrt.com"<>Jenn Zahrt</a></p>
+		<p>Made by <a href="mailto:kent@kentbye.com">Kent Bye</a>, <a href="http://jennzahrt.com"<>Jenn Zahrt</a> & <a href="http://www.hellenisticastrology.com/courses/hellenistic-astrology-course/">Chris Brennan</a></p>
 		</div>
   </div>
 </body>
